--- a/resources/language/Azerbaijani/strings.po
+++ b/resources/language/Azerbaijani/strings.po
@@ -9,21 +9,17 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
-"Language-Team: English (US) (http://www.transifex.com/projects/p/xbmc-addons/language/en_US/)\n"
+"Language-Team: Azerbaijani (http://www.transifex.com/projects/p/xbmc-addons/language/az/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en_US\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: az\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
-msgctxt "#32140"
-msgid "Save"
-msgstr "Save"
+msgctxt "#32191"
+msgid "Error"
+msgstr "Xəta"
 
-msgctxt "#32141"
-msgid "Delete"
-msgstr "Delete"
-
-msgctxt "#32212"
-msgid "Cancel"
-msgstr "Cancel"
+msgctxt "#32335"
+msgid "No"
+msgstr "Yox"
