--- a/resources/language/Croatian/strings.po
+++ b/resources/language/Croatian/strings.po
@@ -69,8 +69,8 @@ msgid "Configure a hostname, keyboard type, perform a reset, update, or backups 
 msgstr "Podesite naziv računala, vrstu tipkovnice, ponovno pokrenite, ažurirajte ili sigurnosno kopirajte i obnovite"
 
 msgctxt "#701"
-msgid "Configure network startup options, network mounts, NTP and VPNs"
-msgstr "Podesite mogućnosti pokretanja mreže, mrežna montiranja, NTP i VPN-ove"
+msgid "Configure network startup options, NTP and VPNs"
+msgstr "Podestite mrežne mogućnosti pri pokretanju sustava, NTP i VPN"
 
 msgctxt "#702"
 msgid "Manage the Ethernet, Wireless and VPN connections available to the system"
@@ -204,10 +204,6 @@ msgctxt "#734"
 msgid "Configure the 3rd time (NTP) server"
 msgstr "Podesite 3. vrijeme (NTP) poslužitelja"
 
-msgctxt "#735"
-msgid "Configure boot-time mounting of a remote filesystem, e.g. NFS or SMB mounts on a remote NAS, without needing autostart.sh hacks."
-msgstr "Podesite vrijeme montiranja pri podizanju sustava udaljenih datotečnih sustava, npr. NFS ili SMB montiranja na udaljenom NAS, bez potrebe autostart.sh hakiranja."
-
 msgctxt "#736"
 msgid "Set to ON to delay XBMC startup until the network is available. Use this if the OS is booting into XBMC before the network is up and central MySQL databases are accessible."
 msgstr "Postavite na  UKLJUČENO za odgodu pokretanja XBMC-a dok mreža ne postane dostupna. Koristi ovo ako se OS podiže u XBMC prije nego se mreža uključi i središnja MySQL baza podataka je dostupna."
@@ -284,6 +280,10 @@ msgctxt "#754"
 msgid "Configure the 2nd keyboard software Variant"
 msgstr "Podesite 2. softverski raspored tipkovnice"
 
+msgctxt "#755"
+msgid "Auto share external drives / partitions"
+msgstr "Automatsko dijeljenje vanjskih uređaja/particija"
+
 msgctxt "#32000"
 msgid "Network"
 msgstr "Mreža"
@@ -327,10 +327,6 @@ msgstr "Tipkovnica"
 msgctxt "#32010"
 msgid "Keyboard Layout"
 msgstr "Raspored tipkovnice"
-
-msgctxt "#32011"
-msgid "Power Saving"
-msgstr "Štednja energije"
 
 msgctxt "#32012"
 msgid "Sleep hard drive after (minutes)"
@@ -808,6 +804,10 @@ msgctxt "#32215"
 msgid "Invalid Email Address"
 msgstr "Pogrešna adresa e-pošte"
 
+msgctxt "#32216"
+msgid "Auto-Share External Drives"
+msgstr "Automatsko dijeljenje vanjskih uređaja"
+
 msgctxt "#32300"
 msgid "Welcome to [COLOR FF757677]Open[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
 msgstr "Dobrodošli u [COLOR FF757677]Otvori[/COLOR][COLOR FF8ABEE2]ELEC[/COLOR]"
@@ -991,50 +991,6 @@ msgstr "Bluetooth daemon nije pokrenut!"
 msgctxt "#32346"
 msgid "Bluetooth is disabled"
 msgstr "Bluetooth je onemogućen"
-
-msgctxt "#32347"
-msgid "Enable hard drive sleep when idle"
-msgstr "Omogući spavanje tvrdog diska kada je u mirovanju"
-
-msgctxt "#32348"
-msgid "Network Mounts"
-msgstr "Mrežna montiranja"
-
-msgctxt "#32349"
-msgid "Add"
-msgstr "Dodaj"
-
-msgctxt "#32350"
-msgid "Mount"
-msgstr "Montiraj"
-
-msgctxt "#32351"
-msgid "Type"
-msgstr "Vrsta"
-
-msgctxt "#32352"
-msgid "Mount Point"
-msgstr "Točka montiranja"
-
-msgctxt "#32353"
-msgid "Server"
-msgstr "Poslužitelj"
-
-msgctxt "#32354"
-msgid "Share"
-msgstr "Dijeli"
-
-msgctxt "#32355"
-msgid "Username"
-msgstr "Korisničko ime"
-
-msgctxt "#32356"
-msgid "Password"
-msgstr "Lozinka"
-
-msgctxt "#32357"
-msgid "Mount Options"
-msgstr "Mogućnosti montiranja"
 
 msgctxt "#32358"
 msgid "Trust and Connect"
