--- a/resources/language/Faroese/strings.po
+++ b/resources/language/Faroese/strings.po
@@ -9,21 +9,21 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
-"Language-Team: English (US) (http://www.transifex.com/projects/p/xbmc-addons/language/en_US/)\n"
+"Language-Team: Faroese (http://www.transifex.com/projects/p/xbmc-addons/language/fo/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en_US\n"
+"Language: fo\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-msgctxt "#32140"
-msgid "Save"
-msgstr "Save"
+msgctxt "#32106"
+msgid "Username"
+msgstr "Brúkaranavn"
 
-msgctxt "#32141"
-msgid "Delete"
-msgstr "Delete"
+msgctxt "#32191"
+msgid "Error"
+msgstr "Feilur"
 
-msgctxt "#32212"
-msgid "Cancel"
-msgstr "Cancel"
+msgctxt "#32335"
+msgid "No"
+msgstr "Nei"
