--- a/resources/language/Lithuanian/strings.po
+++ b/resources/language/Lithuanian/strings.po
@@ -44,6 +44,10 @@ msgctxt "#32002"
 msgid "System"
 msgstr "Sistema"
 
+msgctxt "#32004"
+msgid "IP Address"
+msgstr "IP Adresas"
+
 msgctxt "#32005"
 msgid "Type"
 msgstr "Rūšis"
@@ -67,6 +71,10 @@ msgstr "Naudotojo vardas"
 msgctxt "#32110"
 msgid "Connection"
 msgstr "Prijungimas"
+
+msgctxt "#32114"
+msgid "IP Address"
+msgstr "IP Adresas"
 
 msgctxt "#32140"
 msgid "Save"
@@ -131,22 +139,6 @@ msgstr "Taip"
 msgctxt "#32335"
 msgid "No"
 msgstr "Ne"
-
-msgctxt "#32349"
-msgid "Add"
-msgstr "Pridėti"
-
-msgctxt "#32351"
-msgid "Type"
-msgstr "Rūšis"
-
-msgctxt "#32355"
-msgid "Username"
-msgstr "Naudotojo vardas"
-
-msgctxt "#32356"
-msgid "Password"
-msgstr "Slaptažodis"
 
 msgctxt "#32364"
 msgid "Update available"
