--- a/resources/language/Uzbek/strings.po
+++ b/resources/language/Uzbek/strings.po
@@ -20,13 +20,41 @@ msgctxt "#603"
 msgid "Type"
 msgstr "Turi"
 
+msgctxt "#32001"
+msgid "Services"
+msgstr "Xizmatlar"
+
 msgctxt "#32005"
 msgid "Type"
 msgstr "Turi"
 
-msgctxt "#32351"
-msgid "Type"
-msgstr "Turi"
+msgctxt "#32106"
+msgid "Username"
+msgstr "Foydalanuvchi nomi"
+
+msgctxt "#32140"
+msgid "Save"
+msgstr "Saqlash"
+
+msgctxt "#32141"
+msgid "Delete"
+msgstr "O'chirish"
+
+msgctxt "#32191"
+msgid "Error"
+msgstr "Xato"
+
+msgctxt "#32213"
+msgid "Exit"
+msgstr "Chiqish"
+
+msgctxt "#32326"
+msgid "Are you sure?"
+msgstr "Ishonchingiz komilmi?"
+
+msgctxt "#32335"
+msgid "No"
+msgstr "Yo'q"
 
 msgctxt "#32382"
 msgid "Speed"
