--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2014-05-06 v0.3.16
+  (fix) color definitions
+
 2014-04-10 v0.3.15
   (updated) language files from Transifex
   (updated) readability/visibility improvements
