--- a/resources/language/Uzbek/strings.po
+++ b/resources/language/Uzbek/strings.po
@@ -20,6 +20,10 @@ msgctxt "#603"
 msgid "Type"
 msgstr "Turi"
 
+msgctxt "#32000"
+msgid "Network"
+msgstr "Tarmoq"
+
 msgctxt "#32001"
 msgid "Services"
 msgstr "Xizmatlar"
@@ -27,6 +31,10 @@ msgstr "Xizmatlar"
 msgctxt "#32005"
 msgid "Type"
 msgstr "Turi"
+
+msgctxt "#32101"
+msgid "Network"
+msgstr "Tarmoq"
 
 msgctxt "#32106"
 msgid "Username"
@@ -40,9 +48,17 @@ msgctxt "#32141"
 msgid "Delete"
 msgstr "O'chirish"
 
+msgctxt "#32142"
+msgid "Refresh"
+msgstr "Yangilash"
+
 msgctxt "#32191"
 msgid "Error"
 msgstr "Xato"
+
+msgctxt "#32212"
+msgid "Cancel"
+msgstr "Bekor qilish"
 
 msgctxt "#32213"
 msgid "Exit"
