--- a/resources/language/Vietnamese (Viet Nam)/strings.po
+++ b/resources/language/Vietnamese (Viet Nam)/strings.po
@@ -16,10 +16,6 @@ msgstr ""
 "Language: vi_VN\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-msgctxt "#32001"
-msgid "Services"
-msgstr "Dịch vụ"
-
 msgctxt "#32140"
 msgid "Save"
 msgstr "Lưu"
@@ -32,10 +28,6 @@ msgctxt "#32191"
 msgid "Error"
 msgstr "Lỗi"
 
-msgctxt "#32335"
-msgid "No"
-msgstr "Không"
-
-msgctxt "#32382"
-msgid "Speed"
-msgstr "Tốc độ"
+msgctxt "#32212"
+msgid "Cancel"
+msgstr "Hủy bỏ"
