--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2014-06-16 v0.3.18
+  (updated) language files from Transifex
+
 2014-05-07 v0.3.17
   (fix) selection problem with skin.transparency
 
