--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2014-07-09 v0.3.19
+  (fix) manual update when lang set to russian
+
 2014-06-16 v0.3.18
   (updated) language files from Transifex
 
