--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2014-10-22 v0.4.4
+  (change) xbmc userdir is now /storage/.kodi
+
 2014-07-09 v0.4.2
   (fix) manual update when lang set to russian
 
