--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+2014-10-30 v0.5.1
+  (fix) welcome screen logo
+  (change) rebrand hostname on first boot
+
 2014-10-22 v0.5.0
   (fix) change language in wizard
   (change) rework buildsystem
